--- a/WebServer/package.json
+++ b/WebServer/package.json
@@ -7,9 +7,9 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "axios": "^1.7.8",
     "express": "^4.21.1"
-  }
+  },
+  "description": ""
 }
