--- a/WebServer/package.json
+++ b/WebServer/package.json
@@ -8,8 +8,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.8",
-    "express": "^4.21.1"
+    "axios": "^1.7.9",
+    "express": "^4.21.1",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.1",
+    "xml2js": "^0.6.2"
   },
   "description": ""
 }
