--- a/WebServer/package.json
+++ b/WebServer/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "express": "^4.21.1",
+    "https": "^1.0.0",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.1",
     "xml2js": "^0.6.2"
