--- a/WebServer/package.json
+++ b/WebServer/package.json
@@ -9,8 +9,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "https": "^1.0.0",
+    "jose": "^5.9.6",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.1",
     "xml2js": "^0.6.2"
